# stackdemo

./: .gitignore  CMakeLists.txt  build.ninja
include/: stack.h
internal/: stack_array.h  stack_internal.h  stack_linked.h  traits_internal.h
src/: main.c  stack.c  stack_array.c  stack_linked.c
